src/objects/ap_pdb_trip_cms__x.object
<CustomObject>
    <description>caesars$ap_pdb_trip_cms</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$ap_pdb_trip_cms</externalName>
    <fields>
        <fullName>ap_pdb_trip_hdr_fk__c</fullName>
        <description>ap_pdb_trip_hdr_fk</description>
        <externalDeveloperName>ap_pdb_trip_hdr_fk</externalDeveloperName>
        <label>ap_pdb_trip_hdr_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_fk__c</fullName>
        <description>contact_fk</description>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>contact_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>f_actual_all__c</fullName>
        <description>f_actual_all</description>
        <externalDeveloperName>f_actual_all</externalDeveloperName>
        <label>f_actual_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_game__c</fullName>
        <description>f_actual_game</description>
        <externalDeveloperName>f_actual_game</externalDeveloperName>
        <label>f_actual_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_oth__c</fullName>
        <description>f_actual_oth</description>
        <externalDeveloperName>f_actual_oth</externalDeveloperName>
        <label>f_actual_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_slot__c</fullName>
        <description>f_actual_slot</description>
        <externalDeveloperName>f_actual_slot</externalDeveloperName>
        <label>f_actual_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_worth__c</fullName>
        <description>f_comp_worth</description>
        <externalDeveloperName>f_comp_worth</externalDeveloperName>
        <label>f_comp_worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all__c</fullName>
        <description>f_theo_all</description>
        <externalDeveloperName>f_theo_all</externalDeveloperName>
        <label>f_theo_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_game__c</fullName>
        <description>f_theo_game</description>
        <externalDeveloperName>f_theo_game</externalDeveloperName>
        <label>f_theo_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_oth__c</fullName>
        <description>f_theo_oth</description>
        <externalDeveloperName>f_theo_oth</externalDeveloperName>
        <label>f_theo_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot__c</fullName>
        <description>f_theo_slot</description>
        <externalDeveloperName>f_theo_slot</externalDeveloperName>
        <label>f_theo_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ap_pdb_trip_id__c</fullName>
        <description>i_ap_pdb_trip_id</description>
        <externalDeveloperName>i_ap_pdb_trip_id</externalDeveloperName>
        <label>i_ap_pdb_trip_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_comped_trip__c</fullName>
        <description>i_comped_trip</description>
        <externalDeveloperName>i_comped_trip</externalDeveloperName>
        <label>i_comped_trip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_nbr_trip_game__c</fullName>
        <description>i_nbr_trip_game</description>
        <externalDeveloperName>i_nbr_trip_game</externalDeveloperName>
        <label>i_nbr_trip_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trip_oth__c</fullName>
        <description>i_nbr_trip_oth</description>
        <externalDeveloperName>i_nbr_trip_oth</externalDeveloperName>
        <label>i_nbr_trip_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trip_slot__c</fullName>
        <description>i_nbr_trip_slot</description>
        <externalDeveloperName>i_nbr_trip_slot</externalDeveloperName>
        <label>i_nbr_trip_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_market_type_id__c</fullName>
        <description>i_prop_market_type_id</description>
        <externalDeveloperName>i_prop_market_type_id</externalDeveloperName>
        <label>i_prop_market_type_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rated_days__c</fullName>
        <description>i_rated_days</description>
        <externalDeveloperName>i_rated_days</externalDeveloperName>
        <label>i_rated_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rated_trips__c</fullName>
        <description>i_rated_trips</description>
        <externalDeveloperName>i_rated_trips</externalDeveloperName>
        <label>i_rated_trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>market_fk__c</fullName>
        <description>market_fk</description>
        <externalDeveloperName>market_fk</externalDeveloperName>
        <label>market_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>caesars$ap_pdb_trip_cms</label>
    <pluralLabel>caesars$ap_pdb_trip_cms</pluralLabel>
</CustomObject>